tests/specs/non_implemented_renamed_exports_declared_earlier.txt
# mod.ts
declare function foo(): void;
  export { foo as bar };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | declare function foo(): void;
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function bar(): void


# output.json
[
  {
    "kind": "function",
    "name": "bar",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": {
        "repr": "void",
        "kind": "keyword",
        "keyword": "void"
      },
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
